unpackaged/main/default/objects/SDO_Service_Bot_Message__c/SDO_Service_Bot_Message__c.object-meta.xml
<CustomObject>
    <description>What: Used by the Jokes part of the Sunny Bot
Who: Service Cloud Team.</description>
    <label>Bot Message</label>
    <nameField>
        <label>Bot Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>