unpackaged/main/default/objects/SDO_Service_Bot_Message__c/fields/Message_1__c.field-meta.xml
<CustomField>
    <fullName>Message_1__c</fullName>
    <label>Message 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>