unpackaged/main/default/objects/SDO_Service_Bot_Message__c/fields/Message_2__c.field-meta.xml
<CustomField>
    <fullName>Message_2__c</fullName>
    <label>Message 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>