unpackaged/main/default/objects/SDO_Service_Bot_Message__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joke</fullName>
            </value>
            <value>
                <fullName>Gratitude</fullName>
            </value>
            <value>
                <fullName>Greetings</fullName>
            </value>
            <value>
                <fullName>Chit Chat</fullName>
            </value>
            <value>
                <fullName>Confused</fullName>
            </value>
            <value>
                <fullName>End Chat</fullName>
            </value>
            <value>
                <fullName>Anything Else</fullName>
            </value>
            <value>
                <fullName>Profanity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>