unpackaged/main/default/objects/SDO_Service_Bot_Message__c/listViews/Chit_Chat.listView-meta.xml
<ListView>
    <fullName>Chit_Chat</fullName>
    <columns>NAME</columns>
    <columns>Message_1__c</columns>
    <columns>Message_2__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Chit Chat</value>
    </filters>
    <label>Chit Chat</label>
</ListView>