unpackaged/main/default/objects/SDO_Service_Bot_Message__c/listViews/Confused.listView-meta.xml
<ListView>
    <fullName>Confused</fullName>
    <columns>NAME</columns>
    <columns>Message_1__c</columns>
    <columns>Message_2__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Confused</value>
    </filters>
    <label>Confused</label>
</ListView>