unpackaged/main/default/objects/SDO_Service_Bot_Message__c/listViews/End_Chat.listView-meta.xml
<ListView>
    <fullName>End_Chat</fullName>
    <columns>NAME</columns>
    <columns>Message_1__c</columns>
    <columns>Message_2__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>End Chat</value>
    </filters>
    <label>End Chat</label>
</ListView>